<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.version>0.21.0</tycho.version>
		<eclipse-repo.url>http://download.eclipse.org/releases/neon</eclipse-repo.url>
		<xtext-repo.url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</xtext-repo.url>
		<m2e-repo.url>http://download.eclipse.org/technology/m2e/releases</m2e-repo.url>
	</properties>

    <groupId>de.dailab.toolipse3</groupId>
    <artifactId>vsdt</artifactId>
    <version>1.4.9-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>de.dailab.vsdt</module>
<!--
        <module>de.dailab.vsdt.diagram</module>
        <module>de.dailab.vsdt.diagram.additions</module>
        <module>de.dailab.vsdt.diagram.interpreter</module>
        <module>de.dailab.vsdt.diagram.meta</module>
        <module>de.dailab.vsdt.edit</module>
        <module>de.dailab.vsdt.trafo</module>
        <module>de.dailab.vsdt.trafo.bpel</module>
        <module>de.dailab.vsdt.trafo.jadlpp</module>
        <module>de.dailab.vsdt.trafo.jiacbeans</module>
        <module>de.dailab.vsdt.trafo.strucbpmn</module>
        <module>de.dailab.vsdt.trafo.text</module>
        <module>de.dailab.vsdt.vsdtagents</module>
-->
        <module>de.dailab.vsdt.vxl2</module>
    </modules>

	<repositories>
		<repository>
			<id>eclipse</id>
			<url>${eclipse-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>xtext</id>
			<url>${xtext-repo.url}</url>
			<layout>p2</layout>
		</repository>
		<repository>
			<id>m2e</id>
			<url>${m2e-repo.url}</url>
			<layout>p2</layout>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>dai-open</id>
			<name>DAI Open</name>
			<url>http://repositories.dai-labor.de/extern/content/repositories/dai-open/</url>
		</repository>
		<snapshotRepository>
			<id>dai-open-snapshot</id>
			<name>DAI Open Snapshot</name>
			<url>http://repositories.dai-labor.de/extern/content/repositories/dai-open-snapshot/</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.6</version>
				<executions>
					<execution>
						<phase>validate</phase>
						<configuration>
							<target>
								<echo message="Delete P2 Repo..." />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<compilerVersion>1.8</compilerVersion>
					<target>1.8</target>
					<source>1.8</source>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<environments>
						<!-- build plugins for linux 32bit with gtk -->
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<!-- build plugins for linux 64bit with gtk -->
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<!-- build plugins for windows (win32) 32bit -->
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<!-- build plugins for windows (win32) 64bit -->
						<environment>
							<os>win32</os> <!-- this is correct! -->
							<ws>win32</ws> <!-- this is correct! -->
							<arch>x86_64</arch>
						</environment>
						<!-- build plugins for macosx 64bit with cocoa -->
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
